@@ -61,78 +61,6 @@ default_socket_name (void)
 }
 
 
-/* Substitute all substrings "$s" in BUFFER by the value of the
-   default socket and replace all "$$" by "$".  Free BUFFER if
-   necessary and return a newly malloced buffer.  */
-static char *
-replace_dollar_s (char *str)
-{
-  int n;
-  char *src;
-  char *dst;
-  const char *socket_name = default_socket_name ();
-  int socket_name_len = strlen (socket_name);
-  char *new_str;
-
-  n = 0;
-  src = str;
-
-  while (*src)
-    {
-      if (*src == '$')
-	{
-	  src++;
-	  if (*src == '\0')
-	    break;
-	  else if (*src == 's')
-	    /* Socket name and surrounding quotes.  */
-	    n += socket_name_len + 2;
-	  else
-	    n++;
-	}
-      else
-	n++;
-      src++;
-    }
-  /* Terminating zero.  */
-  n++;
-
-  new_str = (char *) malloc (n);
-  if (!new_str)
-    return NULL;
-
-  src = str;
-  dst = new_str;
-  while (*src)
-    {
-      if (*src == '$')
-	{
-	  src++;
-	  if (*src == '\0')
-	    break;
-	  else if (*src == 's')
-	    {
-	      /* Socket name and surrounding quotes.  */
-	      *(dst++) = '"';
-	      memcpy (dst, socket_name, socket_name_len);
-	      dst += socket_name_len;
-	      *(dst++) = '"';
-	    }
-	  else
-	    /* Pass through the next character.  */
-	    *(dst++) = *src;
-	}
-      else
-	*(dst++) = *src;
-      src++;
-    }
-  /* Terminating zero.  */
-  *dst = '\0';
-  
-  return new_str;
-}
-
-
 static const char *
 default_uiserver_cmdline (void)
 {
@@ -147,24 +75,15 @@ default_uiserver_cmdline (void)
       if (dir)
 	{
 	  char *uiserver = NULL;
-	  char *old_uiserver = NULL;
 	  int uiserver_malloced = 1;
 	  
 	  uiserver = read_w32_registry_string (NULL, REGKEY, "UI Server");
 	  if (!uiserver)
 	    {
-	      uiserver = "bin\\kleopatra.exe --uiserver-socket $s";
+	      /* The option --use-standard-socket is the default on
+		 windows, so we can omit it here.  */
+	      uiserver = "bin\\kleopatra.exe --daemon";
 	      uiserver_malloced = 0;
-	    }
-
-	  old_uiserver = uiserver;
-	  uiserver = replace_dollar_s (old_uiserver);
-	  if (uiserver_malloced)
-	    free (old_uiserver);
-	  if (!uiserver)
-	    {
-	      free ((void *) dir);
-	      return NULL;
 	    }
 
 	  /* FIXME: Very dirty work-around to make kleopatra find
@@ -174,7 +93,8 @@ default_uiserver_cmdline (void)
 	  
 	  try { name = ((string) dir) + "\\" + uiserver; } catch (...) {}
 	  
-	  free (uiserver);
+	  if (uiserver_malloced)
+	    free (uiserver);
 	  free ((void *) dir);
 	}
     }
